--- a/style.css
+++ b/style.css
@@ -43,12 +43,13 @@ header
     position: absolute;
     left: 30%;
     
-    transform: translateY(-30%);
 }
 
 .header_menu_list
 {
     display:flex;
+    position: relative;
+    top: -28.5px;
 }
 
 
@@ -58,8 +59,8 @@ header
     font-weight: 500;
     color: white;
     font-size: 17px;
-    display: inline-block;
     padding: 0px 63px;
+    display: inline;
 }
 
 .header_menu_item:after
@@ -143,6 +144,16 @@ header
     width: 100%;
 }
 
+.home_scroller
+{
+    width: 100%;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
 .firstpic
 {   
     position: absolute;
@@ -174,7 +185,7 @@ header
 .text_ui
 {
     position: absolute;
-    left: 5%;
+    left: 3%;
     top: 210px;
     color:white;
     font-family: 'Krub', sans-serif;
@@ -196,7 +207,7 @@ header
 .text_beginner
 {
     position: absolute;
-    left: -45px;
+    left: -80px;
     top: 500px;
     color:white;
     font-family: 'Krub', sans-serif;
@@ -274,9 +285,9 @@ header
 
 .arrow1, .arrow2
 {
-    position:absolute;
+    position: absolute;
     left: 70%;
-    top: 700px;
+    top: 750px;
     width:60px;
     height:auto;
     transition: 0.1s linear;
@@ -360,7 +371,7 @@ header
 .block1
 {
     position:absolute;
-    right: 11%;
+    right: 10%;
     top: 450px;
     width: 300px;
     height:auto;
